--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist": "webpack --colors --progress --config webpack.config.js --env production",
     "dev": "webpack --colors --progress --config webpack.config.js --env development"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": {
     "name": "Nicolas Thouvenin",
     "email": "nthouvenin@gmail.com",
@@ -23,8 +23,9 @@
   },
   "dependencies": {
     "vue": "^1.0.16",
-	"vuestrap-base-components": "^0.8.0",
-	"vuestrap-theme-loader": "^0.1.2"
+    "vuestrap-base-components": "^0.8.0",
+    "vuestrap-theme-loader": "^0.1.2",
+    "vuex": "^0.6.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -50,4 +51,3 @@
   },
   "homepage": "https://github.com/touv/castor-gui#readme"
 }
-
