--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "dist/castor-gui.js",
   "scripts": {
+    "start": "node ./server.js",
     "dist": "webpack --colors --progress --config webpack.config.js --env production",
     "dev": "webpack --colors --progress --config webpack.config.js --env development"
   },
@@ -22,10 +23,14 @@
     "url": "https://github.com/castorjs/castor-gui/issues"
   },
   "dependencies": {
+    "gritcode-components": "^0.4.6",
+    "optimist": "^0.6.1",
     "vue": "^1.0.16",
     "vuestrap-base-components": "^0.8.0",
-    "vuestrap-theme-loader": "^0.1.2",
-    "vuex": "^0.6.2"
+    "vuex": "^0.6.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -33,19 +38,11 @@
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.3",
     "css-loader": "^0.21.0",
-    "director": "^1.2.8",
     "extract-text-webpack-plugin": "^0.8.2",
-    "gritcode-components": "^0.4.6",
-    "highlightjs-loader": "^0.2.3",
     "html-loader": "^0.3.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.4.1",
-    "optimist": "^0.6.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
-    "tether": "^1.1.1",
     "vuestrap": "^1.0.2",
-    "vuestrap-docs": "^0.5.1",
     "vuestrap-theme-loader": "^0.1.2",
     "webpack": "^1.12.9"
   },
