--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "gritcode-components": "^0.4.6",
     "vue": "^1.0.20",
+	"vue-resource": "^0.7.0",
     "vuestrap": "^1.0.2",
     "vuestrap-base-components": "^0.8.0"
   },
