--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 .DS_Store
 node_modules
 dist/build.js
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+*.swp
+*.swo
+.~lock
+*.swn
+
